@@ -1,10 +1,12 @@
-# cpangitify [![Build Status](https://secure.travis-ci.org/plicease/App-cpangitify.png)](http://travis-ci.org/plicease/App-cpangitify)
+# cpangitify ![linux](https://github.com/uperl/App-cpangitify/workflows/linux/badge.svg) ![macos](https://github.com/uperl/App-cpangitify/workflows/macos/badge.svg)
 
 Convert cpan distribution from BackPAN to a git repository
 
 # SYNOPSIS
 
-    % cpangitify Foo::Bar
+```
+% cpangitify Foo::Bar
+```
 
 # DESCRIPTION
 
@@ -24,7 +26,9 @@ for the repository).  For example [Mojolicious::Plugin::TtRenderer](https://meta
 once called `MojoX::Renderer::TT`, so you would get both names in the
 history like this:
 
-    % cpangitify Mojolicious::Plugin::TtRenderer MojoX::Renderer::TT
+```
+% cpangitify Mojolicious::Plugin::TtRenderer MojoX::Renderer::TT
+```
 
 # OPTIONS
 
@@ -88,10 +92,12 @@ Here are some similar projects:
     incantation I was able to get a repository for [YAML](https://metacpan.org/pod/YAML) (including history,
     but without authors and without the correct dates):
 
-        % mkdir YAML
-        % git init .
-        % git cpan import --backpan YAML
-        % git merge remotes/cpan/master
+    ```
+    % mkdir YAML
+    % git init .
+    % git cpan import --backpan YAML
+    % git merge remotes/cpan/master
+    ```
 
     One advantage here over `cpangitify` is that you should then later be able to 
     import/merge future CPAN releases into yours.  [Git::CPAN::Patch](https://metacpan.org/pod/Git::CPAN::Patch) also has a bunch of 
